--- a/package.json
+++ b/package.json
@@ -12,15 +12,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-firebase/app": "^23.4.0",
-    "@react-native-firebase/auth": "^23.4.0",
-    "@react-native-firebase/firestore": "^23.4.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "dotenv": "^17.2.1",
     "expo": "~53.0.20",
     "expo-blur": "~14.1.5",
+    "expo-build-properties": "^1.0.9",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
