--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.1",
-    "expo-linear-gradient": "^14.1.5",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.7",
     "expo-splash-screen": "~0.30.10",
@@ -45,7 +45,7 @@
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
+    "react-native-svg": "^15.11.2",
     "react-native-web": "~0.20.0",
     "react-native-web-webview": "^1.0.2",
     "react-native-webview": "13.13.5",
