--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
+    "lucide-react": "^0.563.0",
     "lucide-react-native": "^0.554.0",
     "nativewind": "^4.1.23",
     "prettier-plugin-tailwindcss": "^0.5.14",
